Enable method security and propagate user role as GrantedAuthority
- Add @EnableMethodSecurity to SecurityConfig to activate @PreAuthorize support
- Replace Collections.emptyList() with ROLE_<role> SimpleGrantedAuthority in UserDetailsServiceImpl

Co-Authored-By: Claude <noreply@anthropic.com>